tests/errors/main_fun_invalid_err/main_fun_invalid_err.fs
module rec main_fun_invalid_err.Program

// main function's argument is restricted to _ for compatibility with F#.
let main () = 0
